fixed downloadable item bar alignments

--- a/sources/sass/sbplus.scss
+++ b/sources/sass/sbplus.scss
@@ -1703,7 +1703,7 @@ noscript {
     
 } // end sbplus_wrapper
 
-@media (max-width: 768px) {
+@media (max-width: 799px) {
     .sbplus_wrapper {
         
         .sbplus {
